--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
 
 		<style media="screen">
       #intro {
-            background-image: url("https://backupparachute.com/soar-website/images/jet-sun.jpg");
+            background-image: url("https://backupparachute.com/soar-website/images/jet-sun-full.jpg");
             height: 100vh;
         }
+        .mask {
+          background-color: rgba(0, 0, 0, 0.8) !important;
+        }
+
+        /* Height for devices larger than 576px */
+      @media (min-width: 992px) {
+        #intro {
+          margin-top: -58.59px;
+        }
+      }
     </style>
 	</head>
-	<body class="soar-body">
+	<body class="soar-body" id="intro">
 
-		<div class="container" id="intro">
+    <div class="mask">
+
+		<div class="container h-100">
 
 		<div class="row mt-5">
 
@@ -40,6 +52,8 @@
 		</div>
 
 	</div> <!-- end container -->
+
+    </div> <!-- end mask -->
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
