--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
       #intro {
             background-image: url("https://backupparachute.com/soar-website/images/jet-sun-full.jpg");
             height: 100vh;
+          margin-top: -58.59px;
         }
         .mask {
-          background-color: rgba(0, 0, 0, 0.8) !important;
+          background-color: rgba(0, 0, 0, 0.33) !important;
         }
 
         /* Height for devices larger than 576px */
-      @media (min-width: 992px) {
+      /* @media (min-width: 992px) {
         #intro {
           margin-top: -58.59px;
         }
       }
+      */
     </style>
 	</head>
 	<body class="soar-body" id="intro">
 
     <div class="mask">
 
-		<div class="container h-100">
+		<div class="container d-flex h-100">
 
 		<div class="row mt-5">
 
