--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 
 		<style media="screen">
       #intro {
-            background-image: url("https://backupparachute.com/soar-website/images/jet-sun-full.jpg");
-            height: 100vh;
-          margin-top: -58.59px;
+            /* background-image: url("https://backupparachute.com/soar-website/images/jet-sun-full.jpg"); */
+            background-image: url("https://backupparachute.com/soar-website/images/jet-front-three-quarter.jpg");
+            /* height: 100vh; */
+          /* margin-top: -58.59px; */
         }
         .mask {
           background-color: rgba(0, 0, 0, 0.33) !important;
+          height: 100%;
+          width: 100%;
         }
 
         /* Height for devices larger than 576px */
@@ -30,13 +33,12 @@
       */
     </style>
 	</head>
-	<body class="soar-body" id="intro">
+	<body class="soar-body" id="">
 
-    <div class="mask">
 
-		<div class="container d-flex h-100">
+		<div class="container">
 
-		<div class="row mt-5">
+		<div class="row mt-5 mask" id="intro">
 
 			<div class="col text-center">
 
@@ -54,8 +56,6 @@
 		</div>
 
 	</div> <!-- end container -->
-
-    </div> <!-- end mask -->
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
