--- a/index.html
+++ b/index.html
@@ -1,63 +1,145 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>
-		 SOAR -- Coming Soon!
-		</title>
-	    <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!doctype html>
+<html lang="en" class="h-100">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>SOAR -- Comming Soon</title>
 
+    <!-- Bootstrap core CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-		<link rel="shortcut icon" type="image/png" href="//backupparachute.com/soar-website/images/soar-favicon.png">
+    <!-- Favicons -->
+		<link rel="apple-touch-icon" href="https://backupparachute.com/soar-website/images/soar-favicon.png" sizes="128x128">
+		<link rel="icon" href="https://backupparachute.com/soar-website/images/soar-favicon.png" sizes="32x32" type="image/png">
+		<link rel="icon" href="https://backupparachute.com/soar-website/images/soar-favicon.png" sizes="16x16" type="image/png">
+		<link rel="mask-icon" href="https://backupparachute.com/soar-website/images/soar-favicon.png" color="#7952b3">
+		<link rel="icon" href="https://backupparachute.com/soar-website/images/soar-favicon.png">
 
-		<style media="screen">
-      #intro {
-            /* background-image: url("https://backupparachute.com/soar-website/images/jet-sun-full.jpg"); */
-            background-image: url("https://backupparachute.com/soar-website/images/jet-front-three-quarter.jpg");
-            /* height: 100vh; */
-          /* margin-top: -58.59px; */
-        }
-        .mask {
-          background-color: rgba(0, 0, 0, 0.33) !important;
-          height: 100%;
-          width: 100%;
-        }
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
 
-        /* Height for devices larger than 576px */
-      /* @media (min-width: 992px) {
-        #intro {
-          margin-top: -58.59px;
+			.bg-image {
+				background-image: url("https://backupparachute.com/soar-website/images/jet-sun-full.jpg");
+				background-size: cover;
+				background-repeat: no-repeat;
+			}
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
         }
       }
-      */
+
+			/*
+			 * Globals
+			 */
+
+
+			/* Custom default button */
+			.btn-secondary,
+			.btn-secondary:hover,
+			.btn-secondary:focus {
+			  color: #333;
+			  text-shadow: none; /* Prevent inheritance from `body` */
+			}
+
+
+			/*
+			 * Base structure
+			 */
+
+			body {
+			  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+			  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+			}
+
+			.cover-container {
+			  max-width: 42em;
+			}
+
+
+			/*
+			 * Header
+			 */
+
+			.nav-masthead .nav-link {
+			  padding: .25rem 0;
+			  font-weight: 700;
+			  color: rgba(255, 255, 255, .5);
+			  background-color: transparent;
+			  border-bottom: .25rem solid transparent;
+			}
+
+			.nav-masthead .nav-link:hover,
+			.nav-masthead .nav-link:focus {
+			  border-bottom-color: rgba(255, 255, 255, .25);
+			}
+
+			.nav-masthead .nav-link + .nav-link {
+			  margin-left: 1rem;
+			}
+
+			.nav-masthead .active {
+			  color: #fff;
+			  border-bottom-color: #fff;
+			}
+
     </style>
-	</head>
-	<body class="soar-body" id="">
 
 
-		<div class="container">
+  </head>
+  <body class="d-flex h-100 text-center text-white bg-image">
 
-		<div class="row mt-5 mask" id="intro">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="mb-auto">
+    <div>
+      <h3 class="float-md-start mb-0">SOAR Project</h3>
+      <nav class="nav nav-masthead justify-content-center float-md-end">
+        <!-- <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Contact</a> -->
+      </nav>
+    </div>
+  </header>
 
-			<div class="col text-center">
+  <main class="px-3">
+		<img src="images/soar-logo-med.png" class="img-fluid">
 
-				<img src="images/soar-logo-med.png" class="img-fluid">
-
+    <h1>SOAR</h1>
+    <p class="lead">Put better explaination here, can handle a few sentences worth of teaser info. Spicy jalapeno bacon ipsum dolor amet swine bacon frankfurter, pastrami pork tenderloin pork loin spare ribs pork belly jerky meatloaf strip steak chislic tongue filet mignon.</p>
+    <p class="lead">
+			<div class="mb-3">
+			  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+				<div class="form-check form-switch form-check-inline">
+				  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+				  <label class="form-check-label" for="flexSwitchCheckDefault">Passenger</label>
+				</div>
+				<div class="form-check form-switch form-check-inline">
+					<input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					<label class="form-check-label" for="flexSwitchCheckDefault">Broker</label>
+				</div>
+				<div class="form-check form-switch form-check-inline">
+					<input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+					<label class="form-check-label" for="flexSwitchCheckDefault">Operator</label>
+				</div>
 			</div>
+      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+    </p>
+  </main>
 
-		</div>
+  <footer class="mt-auto text-white-50">
+		<p><small class="mb-3 text-muted">&copy; 2022</small> SOAR Project</p>
+  </footer>
+</div>
 
-		<div class="row mt-5">
-			<div class="col text-center">
-				<h1>Coming Soon!</h1>
-			</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-		</div>
-
-	</div> <!-- end container -->
-
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-	</body>
+  </body>
 </html>
