--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
   </header>
 
   <main class="px-3">
-		<img src="images/soar-logo-med.png" class="img-fluid">
+		<img src="images/soar-logo-small.png" class="img-fluid">
 
     <h1>SOAR</h1>
-    <p class="lead">Put better explaination here, can handle a few sentences worth of teaser info. Spicy jalapeno bacon ipsum dolor amet swine bacon frankfurter, pastrami pork tenderloin pork loin spare ribs pork belly jerky meatloaf strip steak chislic tongue filet mignon.</p>
+    <p class="lead">Sign up to our newsletter to learn more, add more explaination here, can handle a few sentences worth of teaser info. Spicy jalapeno bacon ipsum dolor amet swine bacon frankfurter.</p>
     <p class="lead">
 			<div class="mb-3">
-			  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+			  <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
 			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
 				<div class="form-check form-switch form-check-inline">
 				  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
