--- a/cover-plane.html
+++ b/cover-plane.html
@@ -112,7 +112,7 @@
 		<img src="images/soar-logo-full-small.png" class="img-fluid">
 
     <!-- <h1>SOAR</h1> -->
-    <p class="lead"></p>
+    <p class="lead">Join our wait list today!  We are allowing exclusive access based on wait list order, don't stall, join today!  </p>
     <p class="lead">
 			<div class="mb-3">
 			  <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
