--- a/cover.html
+++ b/cover.html
@@ -55,8 +55,8 @@
 			 */
 
 			body {
-			  /* text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); */
-			  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
+			  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+			  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 			}
 
 			.cover-container {
@@ -94,7 +94,7 @@
 
 
   </head>
-  <body class="d-flex h-100 text-center text-black bg-white ">
+  <body class="d-flex h-100 text-center text-white bg-image">
 
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
@@ -109,10 +109,10 @@
   </header>
 
   <main class="px-3">
-		<img src="images/soar-logo-color-full-small.png" class="img-fluid">
+		<img src="images/soar-logo-full-small.png" class="img-fluid">
 
     <!-- <h1>SOAR</h1> -->
-    <p class="lead">Join our wait list today for exclusive early access.</p>
+    <p class="lead"></p>
     <p class="lead">
 			<div class="mb-3">
 			  <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
@@ -130,12 +130,12 @@
 					<label class="form-check-label" for="flexSwitchCheckDefault">Operator</label>
 				</div>
 			</div>
-      <a href="#" class="btn btn-lg btn-dark fw-bold ">Learn more</a>
+      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
     </p>
   </main>
 
-  <footer class="mt-auto ">
-		<p><small class="mb-3 text-muted">&copy; 2022</small> JETLOCITY LLC</p>
+  <footer class="mt-auto text-white-50">
+		<p><small class="mb-3 text-muted">&copy; 2022</small> SOAR Project</p>
   </footer>
 </div>
 
