--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JETLOCITY -- Comming Soon</title>
+    <title>JETLOCITY -- Thanks</title>
 
     <!-- Bootstrap core CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -112,29 +112,7 @@
 		<img src="images/soar-logo-color-full-small.png" class="img-fluid">
 
     <!-- <h1>SOAR</h1> -->
-    <p class="lead">Join our wait list today for exclusive early access.</p>
-    <p class="lead">
-			<div class="mb-3">
-        <form id="newsletter" class="contact-form" novalidate="novalidate" action="http://jetlocity.securetransmit.io/web/test/form?token=CZ5YfDKEQvLqSMtoNGikAyjZ&redirect_url=https://jetlocity.com/thanks" method="POST">
-
-			  <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
-			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-				<div class="form-check form-switch form-check-inline">
-				  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-				  <label class="form-check-label" for="flexSwitchCheckDefault">Passenger</label>
-				</div>
-				<div class="form-check form-switch form-check-inline">
-					<input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					<label class="form-check-label" for="flexSwitchCheckDefault">Broker</label>
-				</div>
-				<div class="form-check form-switch form-check-inline">
-					<input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-					<label class="form-check-label" for="flexSwitchCheckDefault">Operator</label>
-				</div>
-			</div>
-      <button class="btn btn-lg btn-dark fw-bold " type="submit">Learn More</button>
-      </form>
-    </p>
+    <p class="lead">THANKS!  We will contact you soon.</p>
   </main>
 
   <footer class="mt-auto ">
