--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <p class="lead">Join our wait list today for exclusive early access.</p>
     <p class="lead">
 			<div class="mb-3">
-        <form id="newsletter" class="contact-form" novalidate="novalidate" action="http://jetlocity.securetransmit.io/web/test/form?token=CZ5YfDKEQvLqSMtoNGikAyjZ&redirect_url=https://jetlocity.com/thanks" method="POST">
+        <form id="newsletter" class="contact-form" novalidate="novalidate" action="http://jetlocity.securetransmit.io/web/newsletter/form?token=CZ5YfDKEQvLqSMtoNGikAyjZ&redirect_url=https://jetlocity.com/thanks" method="POST">
 
 			  <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
 			  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
