set email required

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <form id="newsletter" class="contact-form" novalidate="novalidate" action="http://jetlocity.securetransmit.io/web/newsletter/form?token=CZ5YfDKEQvLqSMtoNGikAyjZ&redirect_url=https://jetlocity.com/thanks" method="POST">
 
 			  <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
-			  <input type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="name@example.com">
+			  <input type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="name@example.com" required="true">
 				<div class="form-check form-switch form-check-inline">
 				  <input class="form-check-input" type="checkbox" role="switch" name="passenger" id="flexSwitchCheckDefault">
 				  <label class="form-check-label" for="flexSwitchCheckDefault">Passenger</label>
